# operating-system

./: .gitignore  Cargo.toml
.cargo/: config
src/: lib.rs  main.rs
src/std/: gdt.rs  interrupts.rs  io.rs  memory.rs  mod.rs  panic.rs  pic8259.rs  serial.rs  vga_buffer.rs
src/test/: mod.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
